feat(core): 完成下载参数接口
